ARM: MityARM: Enabled TPS65910 RTC. This configures rtc to use external osc crystal which improves OMAP clocksource accuracy, had about a 4% error before.
Signed-off-by: Cormier,Jonathan <jcormier@criticallink.com>

--- a/arch/arm/configs/mityarm-335x-devkit_defconfig
+++ b/arch/arm/configs/mityarm-335x-devkit_defconfig
@@ -896,9 +896,9 @@ CONFIG_MTD_ONENAND_OMAP2=y
 # CONFIG_MTD_LPDDR is not set
 CONFIG_MTD_UBI=y
 CONFIG_MTD_UBI_WL_THRESHOLD=4096
-CONFIG_MTD_UBI_BEB_RESERVE=1
+CONFIG_MTD_UBI_BEB_LIMIT=20
+# CONFIG_MTD_UBI_FASTMAP is not set
 # CONFIG_MTD_UBI_GLUEBI is not set
-# CONFIG_MTD_UBI_DEBUG is not set
 CONFIG_DTC=y
 CONFIG_OF=y
 
@@ -2282,7 +2282,7 @@ CONFIG_RTC_INTF_DEV=y
 # CONFIG_RTC_DRV_M41T80 is not set
 # CONFIG_RTC_DRV_BQ32K is not set
 # CONFIG_RTC_DRV_TWL4030 is not set
-# CONFIG_RTC_DRV_TPS65910 is not set
+CONFIG_RTC_DRV_TPS65910=y
 # CONFIG_RTC_DRV_S35390A is not set
 # CONFIG_RTC_DRV_FM3130 is not set
 # CONFIG_RTC_DRV_RX8581 is not set
@@ -2423,11 +2423,9 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_EFS_FS is not set
 # CONFIG_JFFS2_FS is not set
 CONFIG_UBIFS_FS=y
-# CONFIG_UBIFS_FS_XATTR is not set
 # CONFIG_UBIFS_FS_ADVANCED_COMPR is not set
 CONFIG_UBIFS_FS_LZO=y
 CONFIG_UBIFS_FS_ZLIB=y
-# CONFIG_UBIFS_FS_DEBUG is not set
 # CONFIG_LOGFS is not set
 CONFIG_CRAMFS=y
 # CONFIG_SQUASHFS is not set
